# ObjectTracker

./: .gitignore  CMakeLists.txt  README.md
include/: Position.hh  Tracker.hh
src/: Tracker.cpp  main.cpp
